--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,13 +1,6 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
-
+body{
+  max-width: 1440px;
+}
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -22,4 +15,45 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+.container {
+  margin: 36px 535px 0px 570px;
+}
+.input {
+  color: #808080;
+  font-family: "Montserrat";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.64px;
+  padding: 8px 16px;
+  border-radius: 4px;
+  background: #FFF;
+  border: 1px solid #808080;
+}
+
+.input:hover{
+  border: 1px solid #000;
+}
+
+.button {
+  padding: 8px 16px;
+  border-radius: 8px;
+  border: 1px solid #4E75FF;
+  background: #4E75FF;
+  color: #FFF;
+
+  font-family: "Montserrat";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.64px;
+}
+
+.button:hover{
+  background: #6C8CFF;
+  border: 1px solid #6C8CFF;
 }
