--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,8 +17,11 @@ body{
   -webkit-text-size-adjust: 100%;
 }
 
+ul{
+  list-style: none;
+}
 .container {
-  margin: 36px 535px 0px 570px;
+  margin: 36px 395px 0px 625px;
 }
 .input {
   color: #808080;
@@ -57,3 +60,109 @@ body{
   background: #6C8CFF;
   border: 1px solid #6C8CFF;
 }
+
+.content{
+  display: grid;
+  grid-template-columns: repeat(4, 60px);
+  grid-auto-rows: 25px;
+  gap: 10px;
+}
+
+.text{
+  font-size: 12px;
+  text-align: center;
+  margin: 5px 0;
+}
+
+.titles{
+  font-size: 12px;
+  text-align: center;
+  margin: 5px 0;
+}
+
+.gallery{
+  display: grid;
+  grid-template-columns: repeat(5, 288px);
+  gap: 10px;
+}
+
+.gallery-item{
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.gallery-image{
+  display: block;
+  width: 300px;
+  max-width: 100%;
+  height: 300px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* loader */
+
+.loader { 
+  margin-left: 725px;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: none;
+  position: relative;
+  border: 3px solid;
+  border-color: #FFF #FFF transparent transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+.loader::after,
+.loader::before {
+  content: '';  
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  border: 3px solid;
+  border-color: transparent transparent #FF3D00 #FF3D00;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  animation: rotationBack 0.5s linear infinite;
+  transform-origin: center center;
+}
+.loader::before {
+  width: 32px;
+  height: 32px;
+  border-color: #FFF #FFF transparent transparent;
+  animation: rotation 1.5s linear infinite;
+}
+    
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
+@keyframes rotationBack {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
+    
