--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,9 +19,11 @@ body{
 
 ul{
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .container {
-  margin: 36px 395px 0px 625px;
+  margin: 36px 200px 0px 800px;
 }
 .input {
   color: #808080;
@@ -84,6 +86,8 @@ ul{
   display: grid;
   grid-template-columns: repeat(5, 288px);
   gap: 10px;
+  margin-left: 180px;
+  margin-top: 50px;
 }
 
 .gallery-item{
